--- a/Proyecto2_BDA/Proyecto2_BDA_Presentacion/src/main/java/PanelesAdministrador/MenuAdministrador.form
+++ b/Proyecto2_BDA/Proyecto2_BDA_Presentacion/src/main/java/PanelesAdministrador/MenuAdministrador.form
@@ -15,12 +15,16 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="menuListaLabMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuListaLabActionPerformed"/>
               </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuAgregarLaboratorio">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Agregar laboratorio"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuAgregarLaboratorioActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuEditarLaboratorio">
               <Properties>
